FIX(Usage list): improve column alignment

--- a/src/app/viewing-area/pages/view-usage/components/usage-card/usage-card.component.css
+++ b/src/app/viewing-area/pages/view-usage/components/usage-card/usage-card.component.css
@@ -21,6 +21,10 @@
   min-width: calc(20ch + 70px);
 }
 
+.mat-expansion-panel-header-title {
+  flex-grow: 0 !important;
+}
+
 .headerMinHeight {
   min-height: 4em !important;
 }
